--- a/index.html
+++ b/index.html
@@ -4,26 +4,42 @@
 <head>
     <meta charset="utf-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <title>Page Title</title>
+    <title>Kontakt Baza Podataka</title>
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <link rel="stylesheet" type="text/css" media="screen" href="./css/reset.css" />
     <link rel="stylesheet" type="text/css" media="screen" href="./css/bootstrap.min.css" />
-    <link rel="stylesheet" type="text/css" media="screen" href="./css/styles_list.css" />
-
-
+    <link rel="stylesheet" type="text/css" media="screen" href="./css/styles_grid.css" />
+    <script src="./js/jquery-3.3.1.min.js"></script>
+    <script>
+        $(document).ready(function () {
+            $("#navbar-frame").load("nav.html")
+        })
+    </script>
 
 </head>
 
 <body>
 
+    <!--Navigation Bar-->
+
     <div id="navbar-frame"></div>
 
+    <!--End of Navigation Bar-->
+
+    <!-- Main Body -->
+
+    <div id="okvir"></div>
+
+    <!-- End of Main Body -->
 
 
-    <script src="./js/jquery-3.3.1.min.js"></script>
     <script src="./js/bootstrap.min.js"></script>
     <script src="./js/main.js"></script>
-    
+
+
+
+
+
 </body>
 
 </html>
