--- a/index_list.html
+++ b/index_list.html
@@ -9,20 +9,32 @@
     <link rel="stylesheet" type="text/css" media="screen" href="./css/reset.css" />
     <link rel="stylesheet" type="text/css" media="screen" href="./css/bootstrap.min.css" />
     <link rel="stylesheet" type="text/css" media="screen" href="./css/styles_list.css" />
-
+    <script src="./js/jquery-3.3.1.min.js"></script>
+    <script>
+        $(document).ready(function () {
+            $("#navbar-frame").load("nav.html")
+        })
+    </script>
 
 
 </head>
 
 <body>
 
-    <div id="navbar-frame"></div>
+<!--Navigation Bar-->
 
+<div id="navbar-frame"></div>
 
+<!--End of Navigation Bar-->
 
-    <script src="./js/jquery-3.3.1.min.js"></script>
-    <script src="./js/bootstrap.min.js"></script>
-    <script src="./js/main.js"></script>
+<!-- Main Body -->
+
+<div id="tabela"></div>
+
+<!-- End of Main Body -->
+
+<script src="./js/bootstrap.min.js"></script>
+<script src="./js/main.js"></script>
     
 </body>
 
