--- a/nav.html
+++ b/nav.html
@@ -9,8 +9,6 @@
     <link rel="stylesheet" type="text/css" media="screen" href="./css/reset.css" />
     <link rel="stylesheet" type="text/css" media="screen" href="./css/bootstrap.min.css" />
     <link rel="stylesheet" type="text/css" media="screen" href="./css/styles_grid.css" />
-
-
 </head>
 
 <body>
@@ -33,7 +31,7 @@
                                 src="https://img.icons8.com/ios/30/000000/ingredients-list.png">List view</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" href="index_grid.html"><img
+                        <a class="nav-link" href="index.html"><img
                                 src="https://img.icons8.com/metro/30/000000/activity-grid-2.png">Grid
                             view</a>
                     </li>
@@ -42,10 +40,6 @@
             </div>
         </div>
     </nav>
-
-    <script src="./js/jquery-3.3.1.min.js"></script>
-    <script src="./js/bootstrap.min.js"></script>
-    <script src="./js/main.js"></script>
 
 </body>
 
