--- a/index.html
+++ b/index.html
@@ -9,10 +9,10 @@
     <link rel="stylesheet" type="text/css" media="screen" href="./css/reset.css" />
     <link rel="stylesheet" type="text/css" media="screen" href="./css/bootstrap.min.css" />
     <link rel="stylesheet" type="text/css" media="screen" href="./css/styles_grid.css" />
-    <script src="./js/jquery-3.3.1.min.js"></script>
+    <script src="./js/jquery-3.3.1.min.js" type="text/javascript"></script>
     <script>
         $(document).ready(function () {
-            $("#navbar-frame").load("nav.html")
+            $("#navbar-frame").load("./components/nav.html")
         })
     </script>
 
@@ -32,8 +32,9 @@
 
     <!-- End of Main Body -->
 
-    <script src="./js/bootstrap.min.js"></script>
-    <script src="./js/main.js"></script>
+    <script src="./js/bootstrap.min.js" type="text/javascript"></script>
+    <script src="./components/fetched_data.js" type="text/javascript"></script>
+    <script src="./js/main.js" type="text/javascript"></script>
 
 
 
