--- a/index_list.html
+++ b/index_list.html
@@ -12,7 +12,7 @@
     <script src="./js/jquery-3.3.1.min.js"></script>
     <script>
         $(document).ready(function () {
-            $("#navbar-frame").load("nav.html")
+            $("#navbar-frame").load("./components/nav.html")
         })
     </script>
 
