--- a/index.html
+++ b/index.html
@@ -32,10 +32,10 @@
 
     <!-- End of Main Body -->
 
+    
     <script src="./js/bootstrap.min.js" type="text/javascript"></script>
-    <!-- <script src="./components/fetched_data.js" type="text/javascript"></script> -->
+    <script src="./components/fetched_data.js" type="text/javascript"></script>
     <script src="./js/main.js" type="text/javascript"></script>
-
 
 
 
