--- a/index_list.html
+++ b/index_list.html
@@ -21,21 +21,22 @@
 
 <body>
 
-<!--Navigation Bar-->
+    <!--Navigation Bar-->
 
-<div id="navbar-frame"></div>
+    <div id="navbar-frame"></div>
 
-<!--End of Navigation Bar-->
+    <!--End of Navigation Bar-->
 
-<!-- Main Body -->
+    <!-- Main Body -->
 
-<div id="tabela"></div>
+    <div id="tabela"></div>
 
-<!-- End of Main Body -->
+    <!-- End of Main Body -->
 
-<script src="./js/bootstrap.min.js"></script>
-<script src="./js/main.js"></script>
-    
+    <script src="./js/bootstrap.min.js" type="text/javascript"></script>
+    <script src="./components/fetched_data.js" type="text/javascript"></script>
+    <script src="./js/main.js" type="text/javascript"></script>
+
 </body>
 
 </html>
