--- a/index_list.html
+++ b/index_list.html
@@ -29,7 +29,21 @@
 
     <!-- Main Body -->
 
-    <div id="tabela"></div>
+    <div class="contsiner">
+        <table id="tabela">
+            <thead>
+                <tr>
+                    <th>First Name</th>
+                    <th>Last Name</th>
+                    <th>Email</th>
+                    <th>view</th>
+                    <th>edit</th>
+                    <th>delete</th>
+                </tr>
+            </thead>
+            <tbody id="podaci"></tbody>
+        </table>
+    </div>
 
     <!-- End of Main Body -->
 
