--- a/index.html
+++ b/index.html
@@ -20,6 +20,8 @@
 
 <body>
 
+        
+
     <!--Navigation Bar-->
 
     <div id="navbar-frame"></div>
@@ -29,6 +31,23 @@
     <!-- Main Body -->
 
     <div id="okvir"></div>
+
+    <div id="myModal" class="modal fade">
+            <div class="modal-dialog">
+              <div class="modal-content">
+                <div class="modal-header">
+                  <h4 class="modal-title">CONTACT INFO</h4>
+                </div>
+                <div class="modal-body">
+                  <p class="naziv"></p>
+                  <p class="glumci"></p>
+                  <p class="plot"></p>
+                  <p class="nagrade"></p>
+                  <button id="ok" type="button">OK</button>
+                </div>
+              </div>
+            </div>
+          </div>
 
     <!-- End of Main Body -->
 
