--- a/index_list.html
+++ b/index_list.html
@@ -41,7 +41,16 @@
                     <th>delete</th>
                 </tr>
             </thead>
-            <tbody id="podaci"></tbody>
+            <tbody id="podaci">
+                <!-- <tr>
+                    <td id="cell1"></td>
+                    <td id="cell2"></td>
+                    <td id="cell3"></td>
+                    <td id="cell4"></td>
+                    <td id="cell5"></td>
+                    <td id="cell6"></td>
+                </tr> -->
+            </tbody>
         </table>
     </div>
 
