--- a/index_list.html
+++ b/index_list.html
@@ -6,16 +6,16 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <title>Page Title</title>
     <meta name="viewport" content="width=device-width, initial-scale=1">
+    <link rel="shortcut icon" type="image/png" href="./favicon.ico" />
     <link rel="stylesheet" type="text/css" media="screen" href="./css/reset.css" />
     <link rel="stylesheet" type="text/css" media="screen" href="./css/bootstrap.min.css" />
     <link rel="stylesheet" type="text/css" media="screen" href="./css/styles_list.css" />
-    <script src="./js/jquery-3.3.1.min.js"></script>
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
     <script>
         $(document).ready(function () {
             $("#navbar-frame").load("./components/nav.html")
         })
     </script>
-
 
 </head>
 
@@ -41,24 +41,57 @@
                     <th>delete</th>
                 </tr>
             </thead>
-            <tbody id="podaci">
-                <!-- <tr>
-                    <td id="cell1"></td>
-                    <td id="cell2"></td>
-                    <td id="cell3"></td>
-                    <td id="cell4"></td>
-                    <td id="cell5"></td>
-                    <td id="cell6"></td>
-                </tr> -->
-            </tbody>
+            <tbody id="podaci"></tbody>
         </table>
     </div>
 
     <!-- End of Main Body -->
 
+    <!-- Modal -->
+
+    <div class="modal fade" id="myModalAdd" tabindex="-1" role="dialog" aria-labelledby="myModalLabel" aria-hidden="false"
+  style=" overflow: scroll; height:auto;">
+  <div class="modal-dialog">
+    <div class="modal-content">
+      <div class="modal-header">
+        <h4 class="modal-title" id="myModalLabel">Add Contact</h4>
+      </div>
+      <div class="modal-body">
+        <h1>Add Contact</h1>
+        <form action="https://baza-filmova.herokuapp.com/dodaj-film/" method="POST">
+          First Name: 
+          <input type="text" name="name.first" required><br>
+          Last Name: 
+          <input type="text" name="name.last" required><br>
+          Email Address: 
+          <input type="text" name="email" required><br>
+          Phone Number: 
+          <input type="text" name="phone" required><br>
+          Cell Phone Number: 
+          <input type="text" name="cell" required><br>
+          State: 
+          <input type="text" name="state" required><br>
+          City: 
+          <input type="text" name="city" required><br>
+          Street:
+          <input type="text" name="street" required><br>
+          Age:
+          <input type="text" name="age" required><br>
+          
+          <input type="submit" value="OK">
+        </form>
+        
+      </div>
+    </div>
+  </div>
+</div>
+
+    <!-- Modal End -->
+
     <script src="./js/bootstrap.min.js" type="text/javascript"></script>
     <script src="./components/fetched_data.js" type="text/javascript"></script>
-    <script src="./js/main.js" type="text/javascript"></script>
+    <script src="./js/JSONToLS.js" type="text/javascript"></script>
+    <script src="./js/list.js" type="text/javascript"></script>
 
 </body>
 
