--- a/index.html
+++ b/index.html
@@ -92,7 +92,7 @@
           Age:
           <input type="text" name="age" required><br>
           
-          <input type="submit" value="OK">
+          <input type="submit" value="Submit">
         </form>
 
   <!-- End of Modal Add -->
