--- a/index.html
+++ b/index.html
@@ -11,7 +11,6 @@
   <link rel="stylesheet" type="text/css" media="screen" href="./css/styles_grid.css" />
   <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
   <script>
-
     $(document).ready(function () {
       $("#navbar-frame").load("./components/nav.html")
     });
@@ -20,8 +19,6 @@
 </head>
 
 <body>
-
-
 
   <!--Navigation Bar-->
 
@@ -35,77 +32,13 @@
 
   <!-- End of Main Body -->
 
-  <!-- Modal Info -->
-
-  <div class="modal fade" id="myModalInfo" tabindex="-1" role="dialog" aria-labelledby="myModalLabel" aria-hidden="false"
-  style=" overflow: scroll; height:auto;">
-  <div class="modal-dialog">
-    <div class="modal-content">
-      <div class="modal-header">
-        <h4 class="modal-title" id="myModalLabel">Contact Info</h4>
-      </div>
-      <div class="modal-body">
-        <p id="firstname">First Name:</p>
-        <p id="lastname">Last Name:</p>
-        <p id="email">email:</p>
-        <p id="phone">Phone:</p>
-        <p id="cell">Cell:</p>
-        <p id="state">State:</p>
-        <p id="city">City:</p>
-        <p id="street">Street:</p>
-        <p id="age">Age:</p>
-      </div>
-    </div>
-  </div>
-</div>
-
-  <!-- End of Modal Info -->
-
-  <!-- Modal Add -->
-
-  <div class="modal fade" id="myModalAdd" tabindex="-1" role="dialog" aria-labelledby="myModalLabel" aria-hidden="false"
-  style=" overflow: scroll; height:auto;">
-  <div class="modal-dialog">
-    <div class="modal-content">
-      <div class="modal-header">
-        <h4 class="modal-title" id="myModalLabel">Add Contact</h4>
-      </div>
-      <div class="modal-body">
-        <h1>Add Contact</h1>
-        <form action="https://baza-filmova.herokuapp.com/dodaj-film/" method="POST">
-          First Name: 
-          <input type="text" name="name.first" required><br>
-          Last Name: 
-          <input type="text" name="name.last" required><br>
-          Email Address: 
-          <input type="text" name="email" required><br>
-          Phone Number: 
-          <input type="text" name="phone" required><br>
-          Cell Phone Number: 
-          <input type="text" name="cell" required><br>
-          State: 
-          <input type="text" name="state" required><br>
-          City: 
-          <input type="text" name="city" required><br>
-          Street:
-          <input type="text" name="street" required><br>
-          Age:
-          <input type="text" name="age" required><br>
-          
-          <input type="submit" value="Submit">
-        </form>
-
-  <!-- End of Modal Add -->
-
-
 
   <script src="./js/bootstrap.min.js" type="text/javascript"></script>
-  <script src="./components/fetched_data.js" type="text/javascript"></script>
-  <script src="./js/JSONToLS.js" type="text/javascript"></script>
+  <script src="./js/jquery-3.3.1.min.js" type="text/javascript"></script>
+  <script src="./js/fetched_data.js"></script>
+  <script src="./js/main.js"></script>
   <script src="./js/grid.js"></script>
-
-
-
+  <script src="./js/modals.js" type="text/javascript"></script>
 
 </body>
 
