--- a/index.html
+++ b/index.html
@@ -26,6 +26,8 @@
       <div class="modal-content">
         <div class="modal-header">
           <h4 class="modal-title" id="myModalLabel">Contact Info</h4>
+          <a id="edit"><button class="btn edit">Edit</button></a>
+          <a id="delete"><button class="btn delete">Delete</button></a>
         </div>
         <div class="modal-body">
           <p id="firstname">First Name:</p>
@@ -142,9 +144,9 @@
             </div>
             <br>
             <div class="modal-footer">
-                <button type="button" class="btn btn-secondary" data-dismiss="modal">Close</button>
-                <button type="button" class="btn btn-primary" onclick="insertToJSON()">Save changes</button>
-              </div>
+              <button type="button" class="btn btn-secondary" data-dismiss="modal">Close</button>
+              <button type="button" class="btn btn-primary" onclick="insertToJSON()">Save changes</button>
+            </div>
           </form>
         </div>
       </div>
