--- a/index.html
+++ b/index.html
@@ -30,16 +30,7 @@
           <a id="delete"><button class="btn delete">Delete</button></a>
         </div>
         <div class="modal-body">
-          <p id="firstname">First Name:</p>
-          <p id="lastname">Last Name:</p>
-          <p id="age">Age:</p>
-          <p id="email">email:</p>
-          <p id="phone">Phone:</p>
-          <p id="cell">Cell:</p>
-          <p id="state">State:</p>
-          <p id="city">City:</p>
-          <p id="street">Street:</p>
-          <p id="nat">Drzavljanstvo:</p>
+          <div id="okvirinfo"></div>
         </div>
       </div>
     </div>
