--- a/index_list.html
+++ b/index_list.html
@@ -87,7 +87,7 @@
               <label for="title float-label-control">Titula:</label>
               <div class="row form-animation">
                 <span id="steps1" class="animation-circle steps">1</span>
-                <select type="text" class="form-control" id="id_title" required>
+                <select type="text" id="id_title" required>
                   <option value="Mr."></option>
                   <option value="Mr.">Mr.</option>
                   <option value="Ms.">Ms.</option>
@@ -100,21 +100,21 @@
               <label for="firstname float-label-control">Ime:</label>
               <div class="row form-animation">
                 <span id="steps2" class="animation-circle steps">2</span>
-                <input type="text" class="form-control" id="id_firstname" required>
+                <input type="text" id="id_firstname" required>
               </div>
             </div>
             <div class="form-group">
               <label for="lastname float-label-control">Prezime:</label>
               <div class="row form-animation">
                 <span id="steps3" class="animation-circle steps">3</span>
-                <input type="text" class="form-control" id="id_lastname" required>
+                <input type="text" id="id_lastname" required>
               </div>
             </div>
             <div class="form-group">
               <label for="age float-label-control">Godine:</label>
               <div class="row form-animation">
                 <span id="steps4" class="animation-circle steps">4</span>
-                <input type="number" class="form-control" id="id_age">
+                <input type="number" id="id_age">
               </div>
             </div>
             <hr>
@@ -122,21 +122,21 @@
               <label for="email float-label-control">Email adresa:</label>
               <div class="row form-animation">
                 <span id="steps5" class="animation-circle steps">5</span>
-                <input name="email" type="email" class="form-control" id="id_email" required>
+                <input name="email" type="email" id="id_email" required>
               </div>
             </div>
             <div class="form-group">
               <label for="phone float-label-control">Broj telefona:</label>
               <div class="row form-animation">
                 <span id="steps6" class="animation-circle steps">6</span>
-                <input type="text" class="form-control" id="id_phone" required>
+                <input type="text" id="id_phone" required>
               </div>
             </div>
             <div class="form-group">
               <label for="cell float-label-control">Broj mobilnog telefona:</label>
               <div class="row form-animation">
                 <span id="steps7" class="animation-circle steps">7</span>
-                <input type="text" class="form-control" id="id_cell" required>
+                <input type="text" id="id_cell" required>
               </div>
             </div>
             <hr>
@@ -144,21 +144,21 @@
               <label for="state float-label-control">Drzava:</label>
               <div class="row form-animation">
                 <span id="steps8" class="animation-circle steps">8</span>
-                <input type="text" class="form-control" id="id_state" required>
+                <input type="text" id="id_state" required>
               </div>
             </div>
             <div class="form-group">
               <label for="city float-label-control">Grad:</label>
               <div class="row form-animation">
                 <span id="steps9" class="animation-circle steps">9</span>
-                <input type="text" class="form-control" id="id_city" required>
+                <input type="text" id="id_city" required>
               </div>
             </div>
             <div class="form-group">
               <label for="street float-label-control">Ulica:</label>
               <div class="row form-animation">
                 <span id="steps10" class="animation-circle steps">10</span>
-                <input type="text" class="form-control" id="id_street" required>
+                <input type="text" id="id_street" required>
               </div>
             </div>
             <hr>
@@ -166,7 +166,7 @@
               <label for="nat float-label-control">Drzavljanstvo:</label>
               <div class="row form-animation">
                 <span id="steps11" class="animation-circle steps">11</span>
-                <input type="text" class="form-control" id="id_nat" required>
+                <input type="text" id="id_nat" required>
               </div>
             </div>
             <br>
