--- a/index.html
+++ b/index.html
@@ -12,11 +12,15 @@
   <script src="https://code.jquery.com/jquery-3.4.0.js" integrity="sha256-DYZMCC8HTC+QDr5QNaIcfR7VSPtcISykd+6eSmBW5qo="
     crossorigin="anonymous"></script>
   <script src="./js/jquery-3.3.1.min.js" type="text/javascript"></script>
+  
+
 
 
 </head>
 
 <body>
+
+    
 
   <!-- MODAL INFO -->
 
@@ -30,17 +34,17 @@
           <button class="btn delete">Delete</button>
         </div>
         <div class="modal-body">
-          <p id="id_info_title">Title:</p>
-          <p id="id_info_firstname">First Name:</p>
-          <p id="id_info_lastname">Last Name:</p>
-          <p id="id_info_age">Age:</p>
-          <p id="id_info_email">email:</p>
-          <p id="id_info_phone">Phone:</p>
-          <p id="id_info_cell">Cell:</p>
-          <p id="id_info_state">State:</p>
-          <p id="id_info_city">City:</p>
-          <p id="id_info_street">Street:</p>
-          <p id="id_info_nat">Drzavljanstvo:</p>
+          <p id="id_info_title"></p>
+          <p id="id_info_firstname"></p>
+          <p id="id_info_lastname"></p>
+          <p id="id_info_age"></p>
+          <p id="id_info_email"></p>
+          <p id="id_info_phone"></p>
+          <p id="id_info_cell"></p>
+          <p id="id_info_state"></p>
+          <p id="id_info_city"></p>
+          <p id="id_info_street"></p>
+          <p id="id_info_nat"></p>
         </div>
       </div>
     </div>
@@ -61,7 +65,7 @@
               <label for="title float-label-control">Titula:</label>
               <div class="row form-animation">
                 <span id="steps1" class="animation-circle steps">1</span>
-                <select type="text" id="id_title" required>
+                <select type="text" id="id_title" >
                   <option></option>
                   <option value="Mr.">Mr.</option>
                   <option value="Ms.">Ms.</option>
@@ -74,14 +78,14 @@
               <label for="firstname float-label-control">Ime:</label>
               <div class="row form-animation">
                 <span id="steps2" class="animation-circle steps">2</span>
-                <input type="text" id="id_firstname" required>
+                <input type="text" id="id_firstname" >
               </div>
             </div>
             <div class="form-group">
               <label for="lastname float-label-control">Prezime:</label>
               <div class="row form-animation">
                 <span id="steps3" class="animation-circle steps">3</span>
-                <input type="text" id="id_lastname" required>
+                <input type="text" id="id_lastname" >
               </div>
             </div>
             <div class="form-group">
@@ -96,21 +100,21 @@
               <label for="email float-label-control">Email adresa:</label>
               <div class="row form-animation">
                 <span id="steps5" class="animation-circle steps">5</span>
-                <input name="email" type="email" id="id_email" required>
+                <input name="email" type="email" id="id_email" >
               </div>
             </div>
             <div class="form-group">
               <label for="phone float-label-control">Broj telefona:</label>
               <div class="row form-animation">
                 <span id="steps6" class="animation-circle steps">6</span>
-                <input type="text" id="id_phone" required>
+                <input type="text" id="id_phone" >
               </div>
             </div>
             <div class="form-group">
               <label for="cell float-label-control">Broj mobilnog telefona:</label>
               <div class="row form-animation">
                 <span id="steps7" class="animation-circle steps">7</span>
-                <input type="text" id="id_cell" required>
+                <input type="text" id="id_cell" >
               </div>
             </div>
             <hr>
@@ -118,21 +122,21 @@
               <label for="state float-label-control">Drzava:</label>
               <div class="row form-animation">
                 <span id="steps8" class="animation-circle steps">8</span>
-                <input type="text" id="id_state" required>
+                <input type="text" id="id_state" >
               </div>
             </div>
             <div class="form-group">
               <label for="city float-label-control">Grad:</label>
               <div class="row form-animation">
                 <span id="steps9" class="animation-circle steps">9</span>
-                <input type="text" id="id_city" required>
+                <input type="text" id="id_city" >
               </div>
             </div>
             <div class="form-group">
               <label for="street float-label-control">Ulica:</label>
               <div class="row form-animation">
                 <span id="steps10" class="animation-circle steps">10</span>
-                <input type="text" id="id_street" required>
+                <input type="text" id="id_street" >
               </div>
             </div>
             <hr>
@@ -140,14 +144,14 @@
               <label for="nat float-label-control">Drzavljanstvo:</label>
               <div class="row form-animation">
                 <span id="steps11" class="animation-circle steps">11</span>
-                <input type="text" id="id_nat" required>
+                <input type="text" id="id_nat" >
               </div>
             </div>
             <br>
             <div class="modal-footer">
               <button type="button" class="btn btn-secondary" data-dismiss="modal">Close</button>
-              <button type="button" class="btn btn-primary" onclick="insertToJSON(JSContacts, newContact);">Save changes</button>
-              <button type="submit" class="btn btn-primary" onclick="saveJsonToLS(`contacts`, JSContacts);">Submit</button>
+              <button type="button" class="btn btn-primary" onclick="addUser();;">Save changes</button>
+              <button type="button" class="btn btn-primary" onclick="addUser('insert');">Submit</button>
             </div>
           </form>
         </div>
