--- a/index_list.html
+++ b/index_list.html
@@ -33,6 +33,7 @@
     <table id="tabela">
       <thead>
         <tr>
+          <th infolist="">ID</th>
           <th>First Name</th>
           <th>Last Name</th>
           <th>Email</th>
@@ -57,16 +58,17 @@
           <h4 class="modal-title" id="myModalLabel">Contact Info</h4>
         </div>
         <div class="modal-body">
-          <p id="firstname">First Name:</p>
-          <p id="lastname">Last Name:</p>
-          <p id="age">Age:</p>
-          <p id="email">email:</p>
-          <p id="phone">Phone:</p>
-          <p id="cell">Cell:</p>
-          <p id="state">State:</p>
-          <p id="city">City:</p>
-          <p id="street">Street:</p>
-          <p id="nat">Drzavljanstvo:</p>
+          <p id="id_info_title"></p>
+          <p id="id_info_firstname"></p>
+          <p id="id_info_lastname"></p>
+          <p id="id_info_age"></p>
+          <p id="id_info_email"></p>
+          <p id="id_info_phone"></p>
+          <p id="id_info_cell"></p>
+          <p id="id_info_state"></p>
+          <p id="id_info_city"></p>
+          <p id="id_info_street"></p>
+          <p id="id_info_nat"></p>
         </div>
       </div>
     </div>
@@ -84,11 +86,11 @@
           <form>
             <hr>
             <div class="form-group" id="title">
-              <label for="title float-label-control">Titula:</label>
+              <label for="float-label-control">Titula:</label>
               <div class="row form-animation">
                 <span id="steps1" class="animation-circle steps">1</span>
-                <select type="text" id="id_title" required>
-                  <option value="Mr."></option>
+                <select type="text" id="id_title" name="name.title">
+                  <option></option>
                   <option value="Mr.">Mr.</option>
                   <option value="Ms.">Ms.</option>
                   <option value="Mrs.">Mrs.</option>
@@ -97,83 +99,84 @@
               </div>
             </div>
             <div class="form-group" id="ime">
-              <label for="firstname float-label-control">Ime:</label>
+              <label for="float-label-control">Ime:</label>
               <div class="row form-animation">
                 <span id="steps2" class="animation-circle steps">2</span>
-                <input type="text" id="id_firstname" required>
+                <input type="text" id="id_firstname" name="name.first">
               </div>
             </div>
             <div class="form-group">
-              <label for="lastname float-label-control">Prezime:</label>
+              <label for="float-label-control">Prezime:</label>
               <div class="row form-animation">
                 <span id="steps3" class="animation-circle steps">3</span>
-                <input type="text" id="id_lastname" required>
+                <input type="text" id="id_lastname" name="name.last">
               </div>
             </div>
             <div class="form-group">
-              <label for="age float-label-control">Godine:</label>
+              <label for="float-label-control">Godine:</label>
               <div class="row form-animation">
                 <span id="steps4" class="animation-circle steps">4</span>
-                <input type="number" id="id_age">
+                <input type="number" id="id_age" name="dob.age">
               </div>
             </div>
             <hr>
             <div class="form-group">
-              <label for="email float-label-control">Email adresa:</label>
+              <label for="float-label-control">Email adresa:</label>
               <div class="row form-animation">
                 <span id="steps5" class="animation-circle steps">5</span>
-                <input name="email" type="email" id="id_email" required>
+                <input name="email" type="email" id="id_email" name="email">
               </div>
             </div>
             <div class="form-group">
-              <label for="phone float-label-control">Broj telefona:</label>
+              <label for="float-label-control">Broj telefona:</label>
               <div class="row form-animation">
                 <span id="steps6" class="animation-circle steps">6</span>
-                <input type="text" id="id_phone" required>
+                <input type="text" id="id_phone" name="phone">
               </div>
             </div>
             <div class="form-group">
-              <label for="cell float-label-control">Broj mobilnog telefona:</label>
+              <label for="float-label-control">Broj mobilnog telefona:</label>
               <div class="row form-animation">
                 <span id="steps7" class="animation-circle steps">7</span>
-                <input type="text" id="id_cell" required>
+                <input type="text" id="id_cell" name="cell">
               </div>
             </div>
             <hr>
             <div class="form-group">
-              <label for="state float-label-control">Drzava:</label>
+              <label for="float-label-control">Drzava:</label>
               <div class="row form-animation">
                 <span id="steps8" class="animation-circle steps">8</span>
-                <input type="text" id="id_state" required>
+                <input type="text" id="id_state" name="location.state">
               </div>
             </div>
             <div class="form-group">
-              <label for="city float-label-control">Grad:</label>
+              <label for="float-label-control">Grad:</label>
               <div class="row form-animation">
                 <span id="steps9" class="animation-circle steps">9</span>
-                <input type="text" id="id_city" required>
+                <input type="text" id="id_city" name="location.city">
               </div>
             </div>
             <div class="form-group">
-              <label for="street float-label-control">Ulica:</label>
+              <label for="float-label-control">Ulica:</label>
               <div class="row form-animation">
                 <span id="steps10" class="animation-circle steps">10</span>
-                <input type="text" id="id_street" required>
+                <input type="text" id="id_street" name="location.street">
               </div>
             </div>
             <hr>
             <div class="form-group">
-              <label for="nat float-label-control">Drzavljanstvo:</label>
+              <label for="float-label-control">Drzavljanstvo:</label>
               <div class="row form-animation">
                 <span id="steps11" class="animation-circle steps">11</span>
-                <input type="text" id="id_nat" required>
+                <input type="text" id="id_nat" name="nat">
               </div>
             </div>
             <br>
             <div class="modal-footer">
-                <button type="button" class="btn btn-secondary" data-dismiss="modal">Close</button>
-                <button type="button" class="btn btn-primary">Save changes</button>
-              </div>
+              <button type="button" class="btn btn-secondary" data-dismiss="modal">Close</button>
+              <button type="button" class="btn btn-primary" onclick="addUser('update');;">Save changes</button>
+              <button type="button" class="btn btn-primary" onclick="addUser('insert');">Submit</button>
+            </div>
           </form>
         </div>
       </div>
