--- a/index_list.html
+++ b/index_list.html
@@ -33,7 +33,6 @@
     <table id="tabela">
       <thead>
         <tr>
-          <th infolist="">ID</th>
           <th>First Name</th>
           <th>Last Name</th>
           <th>Email</th>
@@ -86,88 +85,87 @@
           <form>
             <hr>
             <div class="form-group" id="title">
-              <label for="float-label-control">Titula:</label>
+              <label for="title">Titula:</label>
               <div class="row form-animation">
                 <span id="steps1" class="animation-circle steps">1</span>
-                <select type="text" id="id_title" name="name.title">
+                <select type="text" id="id_title" name="title">
                   <option></option>
-                  <option value="Mr.">Mr.</option>
-                  <option value="Ms.">Ms.</option>
-                  <option value="Mrs.">Mrs.</option>
+                  <option>Mr.</option>
+                  <option>Ms.</option>
+                  <option>Mrs.</option>
                 </select>
-
               </div>
             </div>
             <div class="form-group" id="ime">
-              <label for="float-label-control">Ime:</label>
+              <label for="first">Ime:</label>
               <div class="row form-animation">
                 <span id="steps2" class="animation-circle steps">2</span>
-                <input type="text" id="id_firstname" name="name.first">
+                <input type="text" id="id_firstname" name="first">
               </div>
             </div>
             <div class="form-group">
-              <label for="float-label-control">Prezime:</label>
+              <label for="last">Prezime:</label>
               <div class="row form-animation">
                 <span id="steps3" class="animation-circle steps">3</span>
-                <input type="text" id="id_lastname" name="name.last">
+                <input type="text" id="id_lastname" name="last">
               </div>
             </div>
             <div class="form-group">
-              <label for="float-label-control">Godine:</label>
+              <label for="age">Godine:</label>
               <div class="row form-animation">
                 <span id="steps4" class="animation-circle steps">4</span>
-                <input type="number" id="id_age" name="dob.age">
+                <input type="number" id="id_age" name="age">
               </div>
             </div>
             <hr>
             <div class="form-group">
-              <label for="float-label-control">Email adresa:</label>
+              <label for="email">Email adresa:</label>
               <div class="row form-animation">
                 <span id="steps5" class="animation-circle steps">5</span>
                 <input name="email" type="email" id="id_email" name="email">
               </div>
             </div>
             <div class="form-group">
-              <label for="float-label-control">Broj telefona:</label>
+              <label for="phone">Broj telefona:</label>
               <div class="row form-animation">
                 <span id="steps6" class="animation-circle steps">6</span>
-                <input type="text" id="id_phone" name="phone">
+                <input type="tel" id="id_phone" name="phone" pattern="[0-9]{3}-[0-9]{3}-[0-9]{4}">
               </div>
             </div>
             <div class="form-group">
-              <label for="float-label-control">Broj mobilnog telefona:</label>
+              <label for="cell">Broj mobilnog telefona:</label>
               <div class="row form-animation">
                 <span id="steps7" class="animation-circle steps">7</span>
-                <input type="text" id="id_cell" name="cell">
+                <input type="tel" id="id_cell" name="cell" pattern="[0-9]{3}-[0-9]{3}-[0-9]{4}">
               </div>
             </div>
             <hr>
             <div class="form-group">
-              <label for="float-label-control">Drzava:</label>
+              <label for="state">Drzava:</label>
               <div class="row form-animation">
                 <span id="steps8" class="animation-circle steps">8</span>
-                <input type="text" id="id_state" name="location.state">
+                <input type="text" id="id_state" name="state">
               </div>
             </div>
             <div class="form-group">
-              <label for="float-label-control">Grad:</label>
+              <label for="city">Grad:</label>
               <div class="row form-animation">
                 <span id="steps9" class="animation-circle steps">9</span>
-                <input type="text" id="id_city" name="location.city">
+                <input type="text" id="id_city" name="city">
               </div>
             </div>
             <div class="form-group">
-              <label for="float-label-control">Ulica:</label>
+              <label for="street">Ulica:</label>
               <div class="row form-animation">
                 <span id="steps10" class="animation-circle steps">10</span>
-                <input type="text" id="id_street" name="location.street">
+                <input type="text" id="id_street" name="street">
               </div>
             </div>
             <hr>
             <div class="form-group">
-              <label for="float-label-control">Drzavljanstvo:</label>
+              <label for="nat">Drzavljanstvo:</label>
               <div class="row form-animation">
-                <span id="steps11" class="animation-circle steps">11</span>
+                <span class="animation-circle steps">11</span>
                 <input type="text" id="id_nat" name="nat">
               </div>
             </div>
